--- a/eda.ipynb
+++ b/eda.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,10 +717,9 @@
     "    return out\n",
     "\n",
     "def ingest_input(input_json, interaction_type, input_fp = INPUT_PATH,\n",
-    "                 compounds_path = './database/compounds.csv',\n",
+    "                 compounds_path = './database/Drug_info_combined.csv',\n",
     "                 food_path = './database/food.csv'):\n",
     "    assert interaction_type.lower() in ['ddi', 'dfi'], 'API not supported'\n",
-    "    global DFI_INPUT_DRUGS\n",
     "    out = []\n",
     "    \n",
     "    # handle ddi\n",
@@ -737,27 +736,28 @@
     "        drug_pools = pd.read_csv(compounds_path).Name\n",
     "        food_pools = pd.read_csv(food_path).Name\n",
     "        cur_desc = input_json['current_drug']['drug_desc'].lower()\n",
+    "        out += regex_search(cur_desc, drug_pools)\n",
     "        for food in input_json['food']:\n",
-    "            out.append(food.lower())\n",
-    "        \n",
-    "        input_drug = regex_search(cur_desc, drug_pools)\n",
-    "        DFI_INPUT_DRUGS += input_drug\n",
-    "#         print(DFI_INPUT_DRUGS, input_drug)\n",
-    "        out = input_drug + out\n",
+    "            out+= regex_search(food.lower(), food_pools)\n",
     "    # TODO handle not-found case        \n",
     "        \n",
     "    if os.path.exists(input_fp):\n",
     "        os.remove(input_fp)\n",
     "\n",
     "    with open(input_fp, 'w') as fw:\n",
-    "        to_write = '\\n'.join(list(set(out))) + '\\n'\n",
+    "        to_write = '\\n'.join(out) + '\\n'\n",
     "        fw.write(to_write)\n",
     "\n",
     "\n",
-    "def run():\n",
-    "    # execute & make sure it runs linearly \n",
-    "    cmd = ('python run_DeepDDI.py -i %s -o %s'%(INPUT_PATH, OUTPUT_DIR)).split()\n",
-    "#     print(subprocess.run(cmd))\n",
+    "def run(input_json,interaction_type):\n",
+    "    # INPUT: \n",
+    "    #   input_json: the json file of input info\n",
+    "    #   interactioin_type: 'DFI' or 'DDI'\n",
+    "\n",
+    "    # execute & make sure it runs linearly\n",
+    "    ingest_input(input_json, interaction_type)\n",
+    "    cmd = ('python run_DeepDDI.py -i %s -o %s -t %s'%('DDI_input.txt', 'output',str(interaction_type))).split()\n",
+    "    subprocess.run(cmd)\n",
     "    # remove input.txt\n",
     "\n",
     "\n",
@@ -807,7 +807,7 @@
    "outputs": [],
    "source": [
     "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Acetaminophen '},\n",
-    " 'food': ['lemon', 'orange']}\n",
+    " 'food': [ 'orange']}\n",
     "\n",
     "ddi_sample_input =  {'current_drug': {'drug_title': 'Good Drug', 'drug_desc': '! Biotin !'},\n",
     " 'other_drug': [{'drug_title': 'So-so Drug', 'drug_desc': ' cool  Vitamin C '},\n",
@@ -816,38 +816,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "ingest_input(dfi_sample_input, 'dfi')\n",
-    "# ingest_input(ddi_sample_input, 'ddi')\n",
-    "DFI_INPUT_DRUG"
+    "print(run(dfi_sample_input,'DFI'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'interations': [{'drug_pair': ['Acetaminophen', 'Folic Acid'],\n",
-       "   'interaction_desc': 'The therapeutic efficacy of Folic Acid can be decreased when used in combination with Acetaminophen.',\n",
-       "   'side_effect': {'probability': 0.9967656, 'side_effect_id': 74}},\n",
-       "  {'drug_pair': ['Acetaminophen', 'Thiamine'],\n",
-       "   'interaction_desc': 'The metabolism of Acetaminophen can be decreased when combined with Thiamine.',\n",
-       "   'side_effect': {'probability': 0.9861411, 'side_effect_id': 89}}]}"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "collect_output()"
    ]
@@ -862,9 +844,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deepddi2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deepddi2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
