--- a/eda.ipynb
+++ b/eda.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,6 @@
     "        to_write = '\\n'.join(out) + '\\n'\n",
     "        fw.write(to_write)\n",
     "\n",
-    "\n",
     "def run(input_json,interaction_type):\n",
     "    # INPUT: \n",
     "    #   input_json: the json file of input info\n",
@@ -796,18 +795,20 @@
     "        inner_out['interaction_desc'] = interaction_desc\n",
     "        inner_out['side_effect'] = side_effect\n",
     "        out['interations'].append(inner_out)\n",
+    "    if len(out['interations'])==0:\n",
+    "        out='No obvious interactions found'\n",
     "    return out\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Acetaminophen '},\n",
-    " 'food': [ 'orange']}\n",
+    " 'food': ['lemon', 'orange']}\n",
     "\n",
     "ddi_sample_input =  {'current_drug': {'drug_title': 'Good Drug', 'drug_desc': '! Biotin !'},\n",
     " 'other_drug': [{'drug_title': 'So-so Drug', 'drug_desc': ' cool  Vitamin C '},\n",
@@ -816,20 +817,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "print(run(dfi_sample_input,'DFI'))"
+    "print(run(ddi_sample_input,'DDI'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'interations': [{'drug_pair': ['Lemon(ISOPULEGOL|ISOPULEGOLE)',\n",
+       "    'Acetaminophen'],\n",
+       "   'interaction_desc': 'The risk or severity of adverse effects can be increased when Lemon(ISOPULEGOL|ISOPULEGOLE) is combined with Acetaminophen.',\n",
+       "   'side_effect': {'probability': 0.9705547, 'side_effect_id': 113}}]}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "collect_output()"
    ]
