--- a/eda.ipynb
+++ b/eda.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,15 +795,13 @@
     "        inner_out['interaction_desc'] = interaction_desc\n",
     "        inner_out['side_effect'] = side_effect\n",
     "        out['interations'].append(inner_out)\n",
-    "    if len(out['interations'])==0:\n",
-    "        out='No obvious interactions found'\n",
     "    return out\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {
     "scrolled": true
    },
@@ -831,24 +829,21 @@
     }
    ],
    "source": [
-    "print(run(ddi_sample_input,'DDI'))"
+    "print(run(dfi_sample_input,'DFI'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'interations': [{'drug_pair': ['Lemon(ISOPULEGOL|ISOPULEGOLE)',\n",
-       "    'Acetaminophen'],\n",
-       "   'interaction_desc': 'The risk or severity of adverse effects can be increased when Lemon(ISOPULEGOL|ISOPULEGOLE) is combined with Acetaminophen.',\n",
-       "   'side_effect': {'probability': 0.9705547, 'side_effect_id': 113}}]}"
+       "{'interations': []}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
