--- a/eda.ipynb
+++ b/eda.ipynb
@@ -801,11 +801,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Acetaminophen '},\n",
+    "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Vitamin A '},\n",
     " 'food': ['lemon', 'orange']}\n",
     "\n",
     "ddi_sample_input =  {'current_drug': {'drug_title': 'Good Drug', 'drug_desc': '! Biotin !'},\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {
     "scrolled": true
    },
@@ -834,16 +834,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'interations': []}"
+       "{'interations': [{'drug_pair': ['Lemon(ISOPULEGOL|ISOPULEGOLE)', 'Vitamin A'],\n",
+       "   'interaction_desc': 'The risk or severity of adverse effects can be increased when Lemon(ISOPULEGOL|ISOPULEGOLE) is combined with Vitamin A.',\n",
+       "   'side_effect': {'probability': 0.9599271, 'side_effect_id': 113}}]}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
