other drugs prob

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "\n",
     "\n",
     "content_fp = './database/Content.csv'\n",
-    "drug_info_comb_fp = './data/Drug_info_combined.csv'\n",
+    "drug_info_comb_fp = './database/Drug_info_combined.csv'\n",
     "food_fp = './database/Food.csv'\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
     "        os.remove(input_fp)\n",
     "\n",
     "    with open(input_fp, 'w') as fw:\n",
-    "        to_write = '\\n'.join(out) + '\\n'\n",
+    "        to_write = '\\n'.join(list(set(out)))+ '\\n'\n",
     "        fw.write(to_write)\n",
     "\n",
     "def run(input_json,interaction_type):\n",
@@ -766,13 +766,14 @@
     "    pass\n",
     "\n",
     "def collect_output(thres = SIGNIFICANCE, out_txt = OUTPUT_TXT):\n",
-    "    thres = 0.95\n",
+    "    thres = 0.80\n",
     "    res = pd.read_csv(out_txt,\n",
     "                      sep='\\t', \n",
     "                      header=0)[['drug1', 'drug2',\n",
     "                                          'DDI_prob', 'DDI_prob_std',\n",
     "                                          'Confidence_DDI', 'Sentence',\n",
-    "                                          'Interaction_type']]\n",
+    "                                          'Side effects (left)',\n",
+    "                                          'Side effects (right)']]\n",
     "    \n",
     "    temp = res.loc[(res.Confidence_DDI == 1) &\\\n",
     "                   (res.DDI_prob >= thres)]\n",
@@ -783,9 +784,9 @@
     "    out = {}\n",
     "    out['interations'] = []\n",
     "    for line in temp.iterrows():\n",
+    "        print(line[1])\n",
     "        inner_out = {}\n",
-    "        row = line[1].values\n",
-    "    #     print(row)\n",
+    "        row = line[1]\n",
     "        drug_pair = [row[0], row[1]]\n",
     "        interaction_desc = row[5]\n",
     "        side_effect = {}\n",
@@ -793,7 +794,7 @@
     "        side_effect['side_effect_id'] = row[6]\n",
     "        inner_out['drug_pair'] = drug_pair\n",
     "        inner_out['interaction_desc'] = interaction_desc\n",
-    "        inner_out['side_effect'] = side_effect\n",
+    "        inner_out['side_effect'] = \n",
     "        out['interations'].append(inner_out)\n",
     "    return out\n",
     "    "
@@ -801,11 +802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Vitamin A '},\n",
+    "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Acetaminophen  '},\n",
     " 'food': ['lemon', 'orange']}\n",
     "\n",
     "ddi_sample_input =  {'current_drug': {'drug_title': 'Good Drug', 'drug_desc': '! Biotin !'},\n",
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 138,
    "metadata": {
     "scrolled": true
    },
@@ -829,29 +830,82 @@
     }
    ],
    "source": [
-    "print(run(dfi_sample_input,'DFI'))"
+    "print(run(ddi_sample_input,'DDI'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "drug1                                       Lemon(ISOPULEGOL|ISOPULEGOLE)\n",
+      "drug2                                             bad drug(acetaminophen)\n",
+      "DDI_prob                                                         0.823056\n",
+      "DDI_prob_std                                                      0.23555\n",
+      "Confidence_DDI                                                          1\n",
+      "Sentence                The risk or severity of adverse effects can be...\n",
+      "Side effects (left)                                                   NaN\n",
+      "Side effects (right)                                                  NaN\n",
+      "Name: 0, dtype: object\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'interations': [{'drug_pair': ['Lemon(ISOPULEGOL|ISOPULEGOLE)', 'Vitamin A'],\n",
-       "   'interaction_desc': 'The risk or severity of adverse effects can be increased when Lemon(ISOPULEGOL|ISOPULEGOLE) is combined with Vitamin A.',\n",
-       "   'side_effect': {'probability': 0.9599271, 'side_effect_id': 113}}]}"
+       "{'interations': [{'drug_pair': ['Lemon(ISOPULEGOL|ISOPULEGOLE)',\n",
+       "    'bad drug(acetaminophen)'],\n",
+       "   'interaction_desc': 'The risk or severity of adverse effects can be increased when Lemon(ISOPULEGOL|ISOPULEGOLE) is combined with bad drug(acetaminophen).',\n",
+       "   'side_effect': {'probability': 0.8230564, 'side_effect_id': nan}}]}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "collect_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a={'interations': [{'drug_pair': ['so-so drug(vitamin a)+', 'good drug(biotin)+'], 'interaction_desc': 'The risk or severity of adverse effects can be increased when so-so drug(vitamin a)+ is combined with good drug(biotin)+.', 'side_effect': {'probability': 0.8664793, 'side_effect_id': 113}}, {'drug_pair': ['so-so drug(vitamin a)+', 'so-so drug(vitamin c)+'], 'interaction_desc': 'The risk or severity of adverse effects can be increased when so-so drug(vitamin a)+ is combined with so-so drug(vitamin c)+.', 'side_effect': {'probability': 0.87038076, 'side_effect_id': 113}}, {'drug_pair': ['so-so drug(vitamin c)+', 'pain-killer(acetaminophen)+'], 'interaction_desc': 'pain-killer(acetaminophen)+ may increase the anticoagulant activities of so-so drug(vitamin c)+.', 'side_effect': {'probability': 0.8899876, 'side_effect_id': 80}}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'drug_pair': ['so-so drug(vitamin a)+', 'good drug(biotin)+'],\n",
+       "  'interaction_desc': 'The risk or severity of adverse effects can be increased when so-so drug(vitamin a)+ is combined with good drug(biotin)+.',\n",
+       "  'side_effect': {'probability': 0.8664793, 'side_effect_id': 113}},\n",
+       " {'drug_pair': ['so-so drug(vitamin a)+', 'so-so drug(vitamin c)+'],\n",
+       "  'interaction_desc': 'The risk or severity of adverse effects can be increased when so-so drug(vitamin a)+ is combined with so-so drug(vitamin c)+.',\n",
+       "  'side_effect': {'probability': 0.87038076, 'side_effect_id': 113}},\n",
+       " {'drug_pair': ['so-so drug(vitamin c)+', 'pain-killer(acetaminophen)+'],\n",
+       "  'interaction_desc': 'pain-killer(acetaminophen)+ may increase the anticoagulant activities of so-so drug(vitamin c)+.',\n",
+       "  'side_effect': {'probability': 0.8899876, 'side_effect_id': 80}}]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['interations']"
    ]
   },
   {
